cabal-version:      2.4
name:               lambda-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             nigosto
maintainer:         nigosto@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable lambda-parser
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Examples.Terms
        Parser
        Transformer
        Substitution.Named
        Substitution.Nameless
        Generator

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.17.2.0,
        containers ^>= 0.7
    hs-source-dirs:   src
    default-language: Haskell2010
