cabal-version:      2.4
name:               lambda-parser
version:            0.1.0.0
author:             nigosto
maintainer:         nigosto@gmail.com
extra-source-files:
    CHANGELOG.md
    README.md

executable lambda-parser
    main-is:          Main.hs
    other-modules:
        Interaction
        Parser
        Transformers
        Generators
        Substitution.Named
        Substitution.Nameless
        BetaRedexes
        Utils.Variables
        Terms
        Libs.Parser
    build-depends:    
        base ^>=4.17.2.0,
        containers ^>= 0.7
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    hs-source-dirs: src src/Tests
    main-is: Test.hs
    default-language: Haskell2010
    build-depends:
        base ^>=4.17.2.0,
        HUnit ^>=1.6,
        containers ^>= 0.7
    other-modules:
        Tests.Parser
        Interaction
        Parser
        Transformers
        Generators
        Substitution.Named
        Substitution.Nameless
        BetaRedexes
        Utils.Variables
        Terms
        Libs.Parser